[gd_scene load_steps=5 format=3 uid="uid://bckq8j56ti72j"]

[ext_resource type="Script" path="res://box.gd" id="1_58n1p"]
[ext_resource type="Texture2D" uid="uid://cxbm3nfnghext" path="res://sprites/caja.png" id="1_qrmbm"]
[ext_resource type="AudioStream" uid="uid://c7r40rabpscc" path="res://sfx/crate_break.wav" id="3_2g6oi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ldi15"]
size = Vector2(32, 32)

[node name="Box" type="Area2D" groups=["Object"]]
collision_layer = 4
collision_mask = 9
script = ExtResource("1_58n1p")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_qrmbm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ldi15")

[node name="BreakSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_2g6oi")
volume_db = -20.0
pitch_scale = 1.44
max_polyphony = 3

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
